# DHNSWDB

./: .gitignore  EPSILON_DECAY_FINDINGS.md  HNSW.md  LIBRARY_USAGE_GUIDE.md  LICENSE  README.md  UCB1_FINDINGS.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
adaptive_ef_tests/: run_all_scenarios.py  scenario_1_large_corpus.py  shared_utils.py
adaptive_ef_tests/results/: scenario_1_adaptive.json  (+7 more)
configs/: default.json  epsilon_decay.json  ucb1.json
dynhnsw/: __init__.py  adaptive_hnsw.py  adaptive_thresholds.py  adaptive_weights.py  config.py  ef_search_selector.py  entry_point_selector.py  feedback.py  graph_validator.py  intent_aware_hnsw.py  intent_aware_weights.py  intent_detector.py  metrics.py  performance_monitor.py  stability_monitor.py  vector_store.py
epsilon_decay_tests/: .gitignore  scenario_1_large_action_space.py  scenario_2_more_intents.py  shared_utils.py
examples/: adaptive_vs_static_ef_comparison.py  ef_convergence_tracker.py  epsilon_decay_ab_test.py  feedback_learning_workflow.py  final_research_validation.py  intent_aware_demo.py  large_scale_ef_validation.py  library_usage_demo.py  quickstart.py  real_world_ab_test.py  real_world_demo.py  real_world_sentence_transformer_validation.py  recall_comparison.py  static_vs_dynamic_ucb1_realworld.py  ucb1_vs_epsilon_greedy.py
layer_adaptive_test/: scenario_1_large_corpus.py  scenario_2_query_difficulty.py  scenario_3_ef_sensitivity.py  scenario_4_large_scale.py
legacy_experiment_tests/: UCB1_FINDINGS.md  realworld_static_vs_ucb1_comparison.py  test_workflow.py
tests/: __init__.py  conftest.py  medical_domain_test.py  test_adaptive_ef_search_end_to_end.py  test_adaptive_hnsw.py  test_adaptive_weights.py  test_builder.py  test_distance.py  test_edge_weight.py  test_ef_search_selector.py  test_end_to_end_adaptive.py  test_feedback.py  test_graph.py  test_graph_validator.py  test_intent_aware_edge_weight.py  test_intent_aware_hnsw.py  test_intent_aware_weights.py  test_intent_detector.py  test_intent_learning.py  test_local_density_difficulty.py  test_metrics.py  test_performance_monitor.py  test_searcher.py  test_stability_monitor.py  test_ucb1_selection.py  test_utils.py  test_vector_store.py
ucb1_recall_test/: scenario_1_large_corpus.py  scenario_2_diverse_queries.py
ucb1_tests/: run_optimized_scenarios.py  scenario_1_large_action_space.py  scenario_3_long_horizon.py
(+30 files in other folders)
